fix(local-nav): left align pin button

--- a/src/components/global/localNav/localNav.scss
+++ b/src/components/global/localNav/localNav.scss
@@ -9,7 +9,7 @@ nav {
   @include typography.type-ui-02;
   position: fixed;
   top: 0;
-  padding: 6px 4px;
+  padding: 4px;
   padding-top: calc(var(--kd-header-height) + 6px);
   left: 0;
   bottom: 0;
@@ -42,7 +42,8 @@ ul {
 
 .toggle-container {
   display: flex;
-  justify-content: flex-end;
+  // justify-content: flex-end;
+  padding-top: 4px;
 }
 
 .nav-toggle {
